--- a/pom.xml
+++ b/pom.xml
@@ -12,16 +12,14 @@
     <build>
         <finalName>thonk</finalName>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
-                <inherited>true</inherited>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
+		<plugin>
+        		<artifactId>maven-compiler-plugin</artifactId>
+        		<version>3.0</version>
+        		<configuration>
+            			<source>1.7</source>
+            			<target>1.7</target>
+        		</configuration>
+        	    </plugin>
         </plugins>
     </build>
 
@@ -38,6 +36,11 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency> 
+            <groupId>javax</groupId>   
+            <artifactId>javaee-api</artifactId>   
+            <version>7.0</version> 
+        </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-servlet-core</artifactId>
